--- a/service.html
+++ b/service.html
@@ -22,7 +22,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <li class="nav__left_item"><a href="homepage.html" class="a1">Photon</a></li>
+    <li class="nav__left_item"><a href="index.html" class="a1">Photon</a></li>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-        <li class="nav__middle_item"><a href="homepage.html">HOME</a></li>
+        <li class="nav__middle_item"><a href="index.html">HOME</a></li>
         </li>
         <li class="nav-item  ">
         <li class="nav__middle_item"> <a href="gallerypage.html"> GALLERY</a></li>
