--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
       </div>
     </div>
   </section>
-  <footer>
+  <!-- <footer>
     <p class="copyrigth">
       Copyright ©
       <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
         class="fa-solid fa-heart"></i> by <a href="https://colorlib.com/" class="colorlib">Colorlib</a>
     </p>
-  </footer>
+  </footer> -->
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
